absolute to relative linking

--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
         <h1 class=" center1">Our Services</h1>
         <div id="services">
         <div class="box">
-            <img src="/img/pizza.png" alt="">
+            <img src="img/pizza.png" alt="">
             <h2 class="h-secondary">Food Catering</h2>
             <p class="center">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur dolores nobis accusantium voluptates, inventore fuga numquam totam hic distinctio cum reiciendis consectetur quas tenetur similique veritatis mollitia eaque aperiam ex blanditiis voluptatem alias. Consequuntur!</p>
         </div>
         <div class="box">
-            <img src="/img/food.png" alt="">
+            <img src="img/food.png" alt="">
             <h2 class="h-secondary">Bulk Ordering</h2>
             <p class="center">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur dolores nobis accusantium voluptates, inventore fuga numquam totam hic distinctio cum reiciendis consectetur quas tenetur similique veritatis mollitia eaque aperiam ex blanditiis voluptatem alias. Consequuntur!</p>
         </div>
         <div class="box">
-            <img src="/img/boy.png" alt="">
+            <img src="img/boy.png" alt="">
             <h2 class="h-secondary">Food Ordering</h2>
             <p class="center">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur dolores nobis accusantium voluptates, inventore fuga numquam totam hic distinctio cum reiciendis consectetur quas tenetur similique veritatis mollitia eaque aperiam ex blanditiis voluptatem alias. Consequuntur!</p>
         </div>
@@ -54,16 +54,16 @@
         <h1 class="primary center1">Our Clients</h1>
         <div id="clients">
             <div class="client-item">
-                <img src="/img/apple.png" alt="Our Client">
+                <img src="img/apple.png" alt="Our Client">
             </div>
             <div class="client-item">
-                <img src="/img/microsoft.png" alt="Our Client">
+                <img src="img/microsoft.png" alt="Our Client">
             </div>
             <div class="client-item">
-                <img src="/img/hp.png" alt="Our Client">
+                <img src="img/hp.png" alt="Our Client">
             </div>
             <div class="client-item">
-                <img src="/img/skype.png" alt="Our Client">
+                <img src="img/skype.png" alt="Our Client">
             </div>
         </div>
     </section>
